--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "esw . --ext .ts",
     "compile": "tsc -b --preserveWatchOutput",
     "dataprep": "npm run exec --workspace=@lasso/dataprep",
-    "build": "npm run clean && npm run lint && npm run dataprep && npm run compile && npm run build",
+    "build": "npm run clean && npm run lint && npm run compile && npm run build --workspaces --if-present",
     "start": "concurrently -n lint,compile,dataprep,client \"npm run lint -- --watch\" \"npm run compile -- --watch\" \"npm run start --workspace=@lasso/dataprep\" \"npm run start --workspace=@lasso/client\"",
     "test": "npm run test"
   },
