--- a/packages/dataprep/package.json
+++ b/packages/dataprep/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
-  "devDependencies": {
-    "@types/papaparse": "^5.3.2"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "papaparse": "^5.3.2"
+    "ajv": "^8.11.0",
+    "typescript-json-schema": "^0.54.0"
   },
   "scripts": {
     "clean": "rimraf lib/",
     "lint": "esw --ext .ts ./src",
     "compile": "tsc -b",
+    "generate:jsonschema": "typescript-json-schema ./src/types.ts '*' --required --ignoreErrors --out src/json-schema.json",
     "test": "mocha --recursive --fail-zero 'false' --require ts-node/register 'test/**/*.ts' ",
-    "build": "npm run clean && npm run lint && npm run compile",
+    "build": "npm run clean && npm run lint && npm run generate:jsonschema && npm run compile",
     "start": "concurrently -n lint,compile,exec \"npm run lint -- --watch\" \"npm run compile -- --watch\" \"npm run exec -- --watch\"",
     "exec": "ts-node ./src/index.ts"
   }
