[global] Start work on client and upgrade all deps to latest version (included react 18)

--- a/docker/project/nginx.dev.conf
+++ b/docker/project/nginx.dev.conf
@@ -31,7 +31,7 @@ http {
     }
 
     location /data {
-      alias /var/www/public/data;
+       root /var/www/public;
     }
 
     location /sockjs-node {
