--- a/docker/project/nginx.prod.conf
+++ b/docker/project/nginx.prod.conf
@@ -28,11 +28,12 @@ http {
     server_name  localhost;
 
     location /data {
-       root /var/www/public/data;
+       root /var/www/public;
     }
 
     location / {
       try_files $uri /index.html;
     }
+
   }
 }
