--- a/packages/dataprep/tsconfig.json
+++ b/packages/dataprep/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "./../../tsconfig.base.json",
-  "include": ["./src"],
+  "include": ["./src/**/*.ts", "./src/**/*.json"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./lib",
     "declarationDir": "./lib",
-    "composite": true
+    "composite": true,
+    "resolveJsonModule": true
   }
 }
