--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "files": [],
-  "references": [
-    { "path": "packages/client" },
-    { "path": "packages/dataprep" }
-  ],
+  "references": [{ "path": "packages/client" }, { "path": "packages/dataprep" }],
   "watchOptions": {
     "excludeDirectories": ["**/node_modules"]
   }
