--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,9 +16,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^4.0.2",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "rehype-raw": "^6.1.1",
+    "rehype-slug": "^5.0.1",
+    "remark-gfm": "^3.0.1",
     "url-template": "^3.0.0",
     "web-vitals": "^3.0.0"
   },
@@ -47,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@lasso/dataprep": "*"
+    "@lasso/dataprep": "*",
+    "@types/leaflet": "^1.7.11"
   }
 }
