[actions] try to fix GH actions

--- a/.github/workflows/deploy-data.yml
+++ b/.github/workflows/deploy-data.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Generate data
         run: |
-          cd packges/dataprep
+          cd packages/dataprep
           npm run exec
 
       - name: Deploy 🚀
