[actions] Try to fix actions part 2

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "clean": "npm run clean --workspaces --if-present",
     "lint": "esw . --ext .ts",
-    "compile": "tsc -b --preserveWatchOutput",
+    "compile": "npm run compile --workspaces --if-present",
     "dataprep": "npm run exec --workspace=@lasso/dataprep",
     "build": "npm run clean && npm run lint && npm run compile && npm run build --workspace=@lasso/dataprep && npm run build --workspace=@lasso/client",
     "start": "concurrently -n lint,compile,dataprep,client \"npm run lint -- --watch\" \"npm run compile -- --watch\" \"npm run start --workspace=@lasso/dataprep\" \"npm run start --workspace=@lasso/client\"",
