--- a/packages/dataprep/tsconfig.json
+++ b/packages/dataprep/tsconfig.json
@@ -5,7 +5,6 @@
     "rootDir": "./src",
     "outDir": "./lib",
     "declarationDir": "./lib",
-    "composite": true,
-    "resolveJsonModule": true
+    "composite": true
   }
 }
