--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "scripts": {
     "clean": "npm run clean --workspaces --if-present",
     "lint": "esw . --ext .ts",
-    "compile": "npm run compile --workspaces --if-present",
+    "compile": "tsc -b --preserveWatchOutput",
     "dataprep": "npm run exec --workspace=@lasso/dataprep",
-    "build": "npm run clean && npm run lint && npm run compile && npm run build --workspace=@lasso/dataprep && npm run build --workspace=@lasso/client",
+    "build": "npm run clean && npm run lint && npm run compile -- --force && npm run build --workspace=@lasso/client",
     "start": "concurrently -n lint,compile,dataprep,client \"npm run lint -- --watch\" \"npm run compile -- --watch\" \"npm run start --workspace=@lasso/dataprep\" \"npm run start --workspace=@lasso/client\"",
     "test": "npm run test --workspaces --if-present"
   },
