--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -6,18 +6,18 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      CI: false
+      PUBLIC_URL: "/lasso"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
       - name: Install
         run: |
           npm install
-
       - name: Build
         run: |
-          cd packages/client
-          PUBLIC_URL="/lasso" CI=false npm run build
+          npm run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.2.5
