[actions] try to fix GH actions part 8

--- a/.github/workflows/deploy-data.yml
+++ b/.github/workflows/deploy-data.yml
@@ -1,5 +1,10 @@
 name: deploy-data
+
 on:
+  workflow_run:
+    workflows: [CI-TEST]
+    types: [completed]
+    branches: [main]
   push:
     branches:
       - main
