--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -1,8 +1,16 @@
 name: deploy-client
 on:
+  workflow_run:
+    workflows: [CI-TEST]
+    types: [completed]
+    branches: [main]
   push:
     branches:
       - main
+    paths:
+      - "packages/dataprep/**"
+      - "data/**"
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -18,7 +26,6 @@ jobs:
       - name: Build
         run: |
           npm run build
-
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
