--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "leaflet": "^1.8.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-leaflet": "^4.0.2",
+    "react-leaflet-custom-control": "^1.3.1",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
