--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "@transifex/cli": "^4.2.4",
+    "@transifex/native": "^4.2.4",
+    "@transifex/react": "^4.2.4",
     "@types/jest": "^28.1.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -33,7 +36,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false --passWithNoTests",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "i18n": "txjs-cli push src/"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chroma-js": "^2.1.4",
     "@types/leaflet": "^1.7.11"
   }
 }
