--- a/packages/dataprep/package.json
+++ b/packages/dataprep/package.json
@@ -8,8 +8,13 @@
     "@turf/combine": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "ajv": "^8.11.0",
+    "geojson": "^0.5.0",
     "nodemon": "^2.0.19",
-    "typescript-json-schema": "^0.54.0"
+    "typescript-json-schema": "^0.54.0",
+    "chroma-js": "^2.4.2"
+  },
+  "devDependencies": {
+    "@types/geojson": "^7946.0.10"
   },
   "scripts": {
     "clean": "rimraf lib/",
