[gh-actions] COnfigure paths for actions

--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -8,8 +8,7 @@ on:
     branches:
       - main
     paths:
-      - "packages/dataprep/**"
-      - "data/**"
+      - "packages/client/**"
 
 jobs:
   deploy:
