--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "leaflet": "^1.8.0",
+    "locale-emoji": "^0.3.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
