[docker] some docker compose does not like "

--- a/docker/.env
+++ b/docker/.env
@@ -16,5 +16,5 @@ CLIENT_PORT=3000
 # Http host port for the application
 HOST_HTTP_PORT=80
 
-DATAPREP_IMPORT_FOLDER="/project/data"
-DATAPREP_EXPORT_FOLDER="/var/www/public/data"
+DATAPREP_IMPORT_FOLDER=/project/data
+DATAPREP_EXPORT_FOLDER=/var/www/public/data
