[global] remove baseUrl from TS config see https://stackoverflow.com/questions/63737470/fix-wrong-auto-imports-in-typescript-monorepo

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,7 +6,8 @@
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "alwaysStrict": true,
-    "baseUrl": ".",
+    //https://stackoverflow.com/questions/63737470/fix-wrong-auto-imports-in-typescript-monorepo
+    //"baseUrl": ".",
     "charset": "utf8",
     "declaration": true,
     "declarationDir": "./lib",
