[global] tsconfig messed up will need more investigation to solve my VsCode issue

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,7 +7,7 @@
     "allowUnusedLabels": false,
     "alwaysStrict": true,
     //https://stackoverflow.com/questions/63737470/fix-wrong-auto-imports-in-typescript-monorepo
-    //"baseUrl": ".",
+    "baseUrl": ".",
     "charset": "utf8",
     "declaration": true,
     "declarationDir": "./lib",
