--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,12 +17,15 @@
     "classnames": "^2.3.1",
     "leaflet": "^1.8.0",
     "locale-emoji": "^0.3.0",
+    "mapbox-gl": "npm:empty-npm-package@^1.0.0",
+    "maplibre-gl": "^2.4.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-leaflet": "^4.0.2",
     "react-leaflet-custom-control": "^1.3.1",
+    "react-map-gl": "^7.0.19",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
