--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "maplibre-gl": "^2.4.0"
   }
 }
