[DataPrep] host URL baseurl bug

--- a/.github/workflows/deploy-data.yml
+++ b/.github/workflows/deploy-data.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      PUBLIC_URL: "/lasso"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
