--- a/data/project_index_example.json
+++ b/data/project_index_example.json
@@ -226,7 +226,7 @@
                 {
                     "id": "emotion_eventful",
                     "source": "Cart_ASUR",
-                    "beforeId": "road_area_pier",
+                    "beforeId": "building",
                     "metadata": {
                         "interactive": true
                     },
