--- a/data/project_index_example.json
+++ b/data/project_index_example.json
@@ -140,7 +140,7 @@
         {
             "id": "pleasant",
             "name": "Pleasant",
-            "basemapStyle": "./dark_matter.style.json",
+            "basemapStyle": "./dark_matter_PA.json",
             "layers": [
                 {
                     "id": "emotion_pleasant",
@@ -221,7 +221,7 @@
         {
             "id": "eventful",
             "name": "EventFul",
-            "basemapStyle": "./dark_matter.style.json",
+            "basemapStyle": "./dark_matter_PA.json",
             "layers": [
                 {
                     "id": "emotion_eventful",
@@ -303,7 +303,7 @@
         {
             "id": "birds",
             "name": "Birds",
-            "basemapStyle": "./dark_matter.style.json",
+            "basemapStyle": "./dark_matter_PA.json",
             "layers": [
                 {
                     "id": "acoustic_birds",
@@ -379,7 +379,7 @@
         {
             "id": "trafic",
             "name": "Trafic",
-            "basemapStyle": "./dark_matter.style.json",
+            "basemapStyle": "./dark_matter_PA.json",
             "layers": [
                 {
                     "id": "acoustic_trafic",
@@ -455,7 +455,7 @@
         {
             "id": "voices",
             "name": "Voices",
-            "basemapStyle": "./dark_matter.style.json",
+            "basemapStyle": "./dark_matter_PA.json",
             "layers": [
                 {
                     "id": "acoustic_voices",
@@ -531,7 +531,7 @@
         {
             "id": "soundlevel",
             "name": "Sound Level",
-            "basemapStyle": "./dark_matter.style.json",
+            "basemapStyle": "./dark_matter_PA.json",
             "layers": [
                 {
                     "id": "acoustic_soundlevel",
