--- a/.github/workflows/deploy-data.yml
+++ b/.github/workflows/deploy-data.yml
@@ -4,10 +4,10 @@ on:
   workflow_run:
     workflows: [CI-TEST]
     types: [completed]
-    branches: [main]
+    branches: [main-fork]
   push:
     branches:
-      - main
+      - main-fork
     paths:
       - "packages/dataprep/**"
       - "data/**"
