come back on main

--- a/.github/workflows/deploy-data.yml
+++ b/.github/workflows/deploy-data.yml
@@ -4,10 +4,10 @@ on:
   workflow_run:
     workflows: [CI-TEST]
     types: [completed]
-    branches: [main-fork]
+    branches: [main]
   push:
     branches:
-      - main-fork
+      - main
     paths:
       - "packages/dataprep/**"
       - "data/**"
