[Action] using local n install because of rights

--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Fix Node version
         run: |
-          npm install -g n
+          curl -L https://bit.ly/n-install | bash
           n 16
 
       - name: Install
