--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-map-gl": "^7.0.19",
     "react-markdown": "^8.0.3",
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
-    "@types/chroma-js": "^2.1.4"
+    "@types/chroma-js": "^2.1.4",
+    "@types/react-helmet": "^6.1.6"
   }
 }
