--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     "@transifex/cli": "^4.2.4",
     "@transifex/native": "^4.2.4",
     "@transifex/react": "^4.2.4",
+    "@turf/center": "^6.5.0",
     "@types/jest": "^28.1.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -25,7 +26,7 @@
     "react-icons": "^4.10.1",
     "react-map-gl": "^7.0.19",
     "react-markdown": "^8.0.3",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "rehype-raw": "^6.1.1",
