--- a/packages/dataprep/package.json
+++ b/packages/dataprep/package.json
@@ -10,18 +10,21 @@
     "ajv": "^8.11.0",
     "chroma-js": "^2.4.2",
     "geojson": "^0.5.0",
+    "iconv-lite": "^0.6.3",
     "nodemon": "^2.0.19",
+    "papaparse": "^5.4.1",
     "shorthash2": "^1.0.3",
     "typescript-json-schema": "^0.59.0"
   },
   "devDependencies": {
-    "@types/geojson": "^7946.0.10"
+    "@types/geojson": "^7946.0.10",
+    "@types/papaparse": "^5.3.7"
   },
   "scripts": {
     "clean": "rimraf lib/",
     "lint": "esw --ext .ts ./src",
     "compile": "tsc -b",
-    "generate:jsonschema": "typescript-json-schema --skipLibCheck ./src/types.ts ImportProject --out ./src/json-schema.json",
+    "generate:jsonschema": "typescript-json-schema --refs --required --skipLibCheck ./src/types.ts ImportProject --out ./src/json-schema.json",
     "test": "mocha --recursive --fail-zero 'false' --require ts-node/register 'test/**/*.ts' ",
     "build": "npm run clean && npm run lint && npm run generate:jsonschema && npm run compile",
     "start": "concurrently -n lint,compile,exec \"npm run lint -- --watch\" \"npm run compile -- --watch\" \"nodemon --watch ./lib --watch ../../data --ignore validation_errors.json --exec npm run exec\"",
