--- a/.github/workflows/deploy-data.yml
+++ b/.github/workflows/deploy-data.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Fix node version
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
       - name: Cache node_modules
         uses: actions/cache@v3
         with:
