--- a/.github/workflows/i18n.yml
+++ b/.github/workflows/i18n.yml
@@ -11,26 +11,20 @@ on:
 jobs:
   i18n:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Fix node version
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
       - name: Cache node_modules
         uses: actions/cache@v3
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install npm
-        run: npm install -g npm@next-8
 
       - name: Install
         run: npm install
