--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@lasso/client",
   "version": "1.0.0",
+  "homepage": "https://github.com/Universite-Gustave-Eiffel/lasso",
   "dependencies": {
     "@lasso/dataprep": "*",
     "@mapbox/mapbox-gl-style-spec": "^13.28.0",
