--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CI: false
+      PUBLIC_URL: "/lasso"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
