Improve clean & compile tasks on project

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -39,6 +39,7 @@
     "web-vitals": "^3.4.0"
   },
   "scripts": {
+    "clean": "rimraf build/ tsconfig.tsbuildinfo",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false --passWithNoTests",
