--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "clean": "rimraf build/ tsconfig.tsbuildinfo",
-    "start": "react-scripts start",
+    "start": "export PUBLIC_URL=/lasso && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false --passWithNoTests",
     "eject": "react-scripts eject",
